<resources>
    <string name="app_name">Gestión energia</string>
    <string name="hola">Hola</string>
    <string name="atras">Atras</string>

    <!-- Eleccion 1 -->
    <string name="gestionaSuministro">Bienvenido,  selecciona  el suministro que quieres gestionar</string>
    <string name="gas">Gas</string>
    <string name="electricidad">Electricidad</string>


    <!-- Eleccion 2 -->
    <string name="gestiona">Selecciona un servicio</string>
    <string name="dar_de_alta">Dar de alta</string>
    <string name="dar_de_baja">Dar de baja</string>
    <string name="cambiar_titular">Cambiar titular</string>
    <string name="cambiar_potencia">Cambiar potencia</string>
    <string name="confirmar">Confirmar</string>
    <string name="direccion">Dirección</string>
    <string name="dni">DNI</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="potencia">Potencia</string>
    <string name="vacio">Hay campos vacíos</string>
    <string name="otra_gestion">Hacer otra gestión</string>
    <string name="confirmado">Gestión realizada exitosamente</string>


</resources>
