<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Eleccion2">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal21"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal22"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal23"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal24"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal25"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal26"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal27"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal28"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal29"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.61" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal31"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal32"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal30"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertical14"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertical16"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertical17"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertical20"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertical18"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.56" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertical19"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.64" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertical15"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <TextView
        android:id="@+id/textViewGestiona"
        style="@style/TextViewGestionarTitulo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/gestiona"
        android:autoSizeMaxTextSize="120sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizontal22"
        app:layout_constraintEnd_toStartOf="@+id/guiavertical15"
        app:layout_constraintStart_toStartOf="@+id/guiavertical14"
        app:layout_constraintTop_toTopOf="@+id/guiahorizontal21" />

    <TextView
        android:id="@+id/textViewAlta"
        style="@style/TextViewGestionar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="120sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:text="@string/dar_de_alta"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizontal24"
        app:layout_constraintEnd_toStartOf="@+id/guiavertical17"
        app:layout_constraintStart_toStartOf="@+id/guiavertical16"
        app:layout_constraintTop_toTopOf="@+id/guiahorizontal23" />

    <TextView
        android:id="@+id/textViewBaja"
        style="@style/TextViewGestionar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="120sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:text="@string/dar_de_baja"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizontal26"
        app:layout_constraintEnd_toStartOf="@+id/guiavertical17"
        app:layout_constraintStart_toStartOf="@+id/guiavertical16"
        app:layout_constraintTop_toTopOf="@+id/guiahorizontal25" />

    <TextView
        android:id="@+id/textViewPotencia"
        style="@style/TextViewGestionar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="120sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:text="@string/cambiar_potencia"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizontal30"
        app:layout_constraintEnd_toStartOf="@+id/guiavertical19"
        app:layout_constraintStart_toStartOf="@+id/guiavertical16"
        app:layout_constraintTop_toTopOf="@+id/guiahorizontal29" />

    <TextView
        android:id="@+id/textViewTitular"
        style="@style/TextViewGestionar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="120sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:text="@string/cambiar_titular"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizontal28"
        app:layout_constraintEnd_toStartOf="@+id/guiavertical18"
        app:layout_constraintStart_toStartOf="@+id/guiavertical16"
        app:layout_constraintTop_toTopOf="@+id/guiahorizontal27"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonAtras"
        style="@style/boton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/atras"

        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizontal32"
        app:layout_constraintEnd_toStartOf="@+id/guiavertical20"
        app:layout_constraintStart_toStartOf="@+id/guiavertical16"
        app:layout_constraintTop_toTopOf="@+id/guiahorizontal31" />


</androidx.constraintlayout.widget.ConstraintLayout>