<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Validar">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertical21"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertical23"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.41" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertical22"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertical25"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.59" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertical26"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertical24"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal33"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal36"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal41"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal42"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal37"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal43"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal44"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal38"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal39"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal46"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal47"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal48"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal40"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal45"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.61" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal34"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizontal35"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <TextView
        android:id="@+id/textViewServicio"
        style="@style/TextViewGestionarTitulo"
        android:layout_width="@dimen/cero"
        android:layout_height="@dimen/cero"
        android:autoSizeMaxTextSize="@dimen/max"
        android:autoSizeMinTextSize="@dimen/min"
        android:autoSizeTextType="uniform"
        android:text="@string/dar_de_alta"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizontal35"
        app:layout_constraintEnd_toStartOf="@+id/guiavertical22"
        app:layout_constraintStart_toStartOf="@+id/guiavertical21"
        app:layout_constraintTop_toTopOf="@+id/guiahorizontal34" />

    <EditText
        android:id="@+id/editTextValor1"
        android:layout_width="@dimen/cero"
        android:layout_height="@dimen/cero"
        android:autoSizeMaxTextSize="@dimen/max"
        android:autoSizeMinTextSize="@dimen/min"
        android:autoSizeTextType="uniform"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizontal41"
        app:layout_constraintEnd_toStartOf="@+id/guiavertical24"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="@+id/guiavertical23"
        app:layout_constraintTop_toTopOf="@+id/guiahorizontal42"
        app:layout_constraintVertical_bias="0.44" />

    <EditText
        android:id="@+id/editTextValor3"
        android:layout_width="@dimen/cero"
        android:layout_height="@dimen/cero"
        android:autoSizeMaxTextSize="@dimen/max"
        android:autoSizeMinTextSize="@dimen/min"
        android:autoSizeTextType="uniform"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizontal45"
        app:layout_constraintEnd_toStartOf="@+id/guiavertical24"
        app:layout_constraintStart_toStartOf="@+id/guiavertical23"
        app:layout_constraintTop_toTopOf="@+id/guiahorizontal46" />

    <TextView
        android:id="@+id/textViewValor3"
        style="@style/TextViewGestionarTitulo"
        android:layout_width="@dimen/cero"
        android:layout_height="@dimen/cero"
        android:autoSizeMaxTextSize="@dimen/max1"
        android:autoSizeMinTextSize="@dimen/min"
        android:autoSizeTextType="uniform"
        android:text="@string/nombre"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizontal40"
        app:layout_constraintEnd_toStartOf="@+id/guiavertical23"
        app:layout_constraintStart_toStartOf="@+id/guiavertical21"
        app:layout_constraintTop_toTopOf="@+id/guiahorizontal39" />

    <TextView
        android:id="@+id/textViewValor2"
        style="@style/TextViewGestionarTitulo"
        android:layout_width="@dimen/cero"
        android:layout_height="@dimen/cero"
        android:autoSizeMaxTextSize="@dimen/max1"
        android:autoSizeMinTextSize="@dimen/min"
        android:autoSizeTextType="uniform"
        android:text="@string/dni"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizontal38"
        app:layout_constraintEnd_toStartOf="@+id/guiavertical23"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guiavertical21"
        app:layout_constraintTop_toTopOf="@+id/guiahorizontal37"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewValor1"
        style="@style/TextViewGestionarTitulo"
        android:layout_width="@dimen/cero"
        android:layout_height="@dimen/cero"
        android:autoSizeMaxTextSize="@dimen/max1"
        android:autoSizeMinTextSize="@dimen/min"
        android:autoSizeTextType="uniform"
        android:text="@string/direccion"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizontal36"
        app:layout_constraintEnd_toStartOf="@+id/guiavertical23"
        app:layout_constraintStart_toStartOf="@+id/guiavertical21"
        app:layout_constraintTop_toTopOf="@+id/guiahorizontal33" />

    <EditText
        android:id="@+id/editTextValor2"
        android:layout_width="@dimen/cero"
        android:layout_height="@dimen/cero"
        android:autoSizeMaxTextSize="@dimen/max"
        android:autoSizeMinTextSize="@dimen/min"
        android:autoSizeTextType="uniform"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizontal44"
        app:layout_constraintEnd_toStartOf="@+id/guiavertical24"
        app:layout_constraintStart_toStartOf="@+id/guiavertical23"
        app:layout_constraintTop_toTopOf="@+id/guiahorizontal43" />

    <Button
        android:id="@+id/buttonConfirmar"
        style="@style/boton"
        android:layout_width="@dimen/cero"
        android:layout_height="@dimen/cero"
        android:text="@string/confirmar"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizontal48"
        app:layout_constraintEnd_toStartOf="@+id/guiavertical24"
        app:layout_constraintStart_toStartOf="@+id/guiavertical25"
        app:layout_constraintTop_toTopOf="@+id/guiahorizontal47" />

    <Button
        android:id="@+id/buttonAtras"
        style="@style/boton"
        android:layout_width="@dimen/cero"
        android:layout_height="@dimen/cero"
        android:text="@string/atras"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizontal48"
        app:layout_constraintEnd_toStartOf="@+id/guiavertical26"
        app:layout_constraintStart_toStartOf="@+id/guiavertical21"
        app:layout_constraintTop_toTopOf="@+id/guiahorizontal47" />
</androidx.constraintlayout.widget.ConstraintLayout>